# Continuum

./: .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt
include/continuum/: utility.hpp
include/continuum/LinearAlgebra/: matrix.hpp
include/continuum/Number/: bigint.hpp  complex.hpp  rational.hpp
include/continuum/functions/: polynomial.hpp
src/: CMakeLists.txt  bigint.cpp  int.cpp
tests/: CMakeLists.txt  test.cpp
